Add basic layout using grid

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="container">
+        <aside>
+            <div id="logo">Dashboard</div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Messages</a></li>
+                <li><a href="#">Tasks</a></li>
+                <li><a href="#">Communities</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Privacy</a></li>
+            </ul>
+        </aside>
+        <div id="content">
+            <header>header</header>
+            <main>main</main>
+        </div>
+    </div>
 </body>
 </html>
