Add sidebar styling and icons

--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <title>Admin Dashboard</title>
 
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
 </head>
 <body>
     <div id="container">
         <aside>
-            <div id="logo">Dashboard</div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Messages</a></li>
-                <li><a href="#">Tasks</a></li>
-                <li><a href="#">Communities</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Privacy</a></li>
-            </ul>
+            <div id="logo"><span class="iconify-inline" data-icon="mdi:desktop-mac-dashboard"></span>Dashboard</div>
+            <div class="nav-list">
+                <a href="#"><span class="iconify-inline" data-icon="mdi:home"></span>Home</a>
+                <a href="#"><span class="iconify-inline" data-icon="mdi:card-account-details-star-outline"></span>Profile</a>
+                <a href="#"><span class="iconify-inline" data-icon="mdi:message-outline"></span>Messages</a>
+                <a href="#"><span class="iconify-inline" data-icon="mdi:history"></span>History</a>
+                <a href="#"><span class="iconify-inline" data-icon="mdi:clipboard-list"></span>Tasks</a>
+                <a href="#"><span class="iconify-inline" data-icon="mdi:account-group-outline"></span>Communities</a>
+            </div>
+            <div class="nav-list">
+                <a href="#"><span class="iconify-inline" data-icon="mdi:cog"></span>Settings</a>
+                <a href="#"><span class="iconify-inline" data-icon="mdi:help-box"></span>Support</a>
+                <a href="#"><span class="iconify-inline" data-icon="mdi:shield-lock-outline"></span>Privacy</a>
+            </div>
         </aside>
         <div id="content">
             <header>header</header>
