Begin adding header and content layout/CSS

--- a/index.html
+++ b/index.html
@@ -28,8 +28,126 @@
             </div>
         </aside>
         <div id="content">
-            <header>header</header>
-            <main>main</main>
+            <header>
+                <div id="search">
+                    search
+                </div>
+                <div id="alerts">
+                    alerts
+                </div>
+                <div id="account-details">
+                    account-details
+                </div>
+                <div id="upload-share">
+                    upload-share
+                </div>
+            </header>
+            <main>
+                <div id="projects">
+                    <h2>Your projects</h2>
+                    <div id="project-list">
+                        <div class="project">
+                            <h3>Project Name</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tellus elementum sagittis vitae et leo duis ut diam quam.</p>
+                            <div class="project-share">
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:star-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:eye-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:share-variant"></span></a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h3>Project Name</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa eget egestas purus viverra accumsan in nisl nisi.</p>
+                            <div class="project-share">
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:star-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:eye-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:share-variant"></span></a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h3>Project Name</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <div class="project-share">
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:star-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:eye-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:share-variant"></span></a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h3>Project Name</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <div class="project-share">
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:star-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:eye-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:share-variant"></span></a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h3>Project Name</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pulvinar proin gravida hendrerit lectus a. In arcu cursus euismod quis.</p>
+                            <div class="project-share">
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:star-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:eye-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:share-variant"></span></a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h3>Project Name</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc mi ipsum faucibus vitae aliquet nec. Vestibulum sed arcu non odio euismod lacinia. Amet risus nullam eget felis eget nunc lobortis.</p>
+                            <div class="project-share">
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:star-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:eye-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:share-variant"></span></a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h3>Project Name</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <div class="project-share">
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:star-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:eye-plus"></span></a>
+                                <a href="#"><span class="iconify-inline" data-icon="mdi:share-variant"></span></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="announcements-trending">
+                    <div id="announcements">
+                        <h2>Announcements</h2>
+                        <div id="announcement-list">
+                            <div class="announcement">
+                                <h4>Announcement Name</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                            <div class="announcement">
+                                <h4>Announcement Name</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                            <div class="announcement">
+                                <h4>Announcement Name</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="trending">
+                        <h2>Trending</h2>
+                        <div id="trending-list">
+                            <div class="trend">
+                                asdf
+                            </div>
+                            <div class="trend">
+                                asdf
+                            </div>
+                            <div class="trend">
+                                asdf
+                            </div>
+                            <div class="trend">
+                                asdf
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
         </div>
     </div>
 </body>
