Finalize layout/CSS for main content section

--- a/index.html
+++ b/index.html
@@ -133,16 +133,32 @@
                         <h2>Trending</h2>
                         <div id="trending-list">
                             <div class="trend">
-                                asdf
+                                <span class="iconify-inline" data-icon="mdi:account-circle"></span>
+                                <div class="trend-details">
+                                    <a href="#">@username</a>
+                                    <p>project name here</p>
+                                </div>
                             </div>
                             <div class="trend">
-                                asdf
+                                <span class="iconify-inline" data-icon="mdi:account-circle"></span>
+                                <div class="trend-details">
+                                    <a href="#">@username</a>
+                                    <p>project name here</p>
+                                </div>
                             </div>
                             <div class="trend">
-                                asdf
+                                <span class="iconify-inline" data-icon="mdi:account-circle"></span>
+                                <div class="trend-details">
+                                    <a href="#">@username</a>
+                                    <p>project name here</p>
+                                </div>
                             </div>
                             <div class="trend">
-                                asdf
+                                <span class="iconify-inline" data-icon="mdi:account-circle"></span>
+                                <div class="trend-details">
+                                    <a href="#">@username</a>
+                                    <p>project name here</p>
+                                </div>
                             </div>
                         </div>
                     </div>
