Finalize layout/CSS for header

--- a/index.html
+++ b/index.html
@@ -30,16 +30,25 @@
         <div id="content">
             <header>
                 <div id="search">
-                    search
+                    <a href="#"><span class="iconify-inline" data-icon="mdi:magnify"></span></a>
+                    <input type="text" id="searchbar" name="searchbar" minlength="1">
                 </div>
                 <div id="alerts">
-                    alerts
+                    <a href="#"><span class="iconify-inline" data-icon="mdi:bell-ring-outline"></span></a>
+                    <span class="iconify-inline avatar" data-icon="mdi:account-circle"></span>
+                    <span id="username">Morgan Oakley</span>
                 </div>
-                <div id="account-details">
-                    account-details
+                <div id="account">
+                    <span class="iconify-inline avatar" data-icon="mdi:account-circle"></span>
+                    <div id="account-details">
+                        <p id="hellomessage">Hi there, </p>
+                        <p id="hellomessagename">Morgan Oakley (<a href="#">@morgan</a>)</p>
+                    </div>
                 </div>
                 <div id="upload-share">
-                    upload-share
+                    <button class="headerbutton">New</button>
+                    <button class="headerbutton">Upload</button>
+                    <button class="headerbutton">Share</button>
                 </div>
             </header>
             <main>
@@ -133,28 +142,28 @@
                         <h2>Trending</h2>
                         <div id="trending-list">
                             <div class="trend">
-                                <span class="iconify-inline" data-icon="mdi:account-circle"></span>
+                                <span class="iconify-inline avatar" data-icon="mdi:account-circle"></span>
                                 <div class="trend-details">
                                     <a href="#">@username</a>
                                     <p>project name here</p>
                                 </div>
                             </div>
                             <div class="trend">
-                                <span class="iconify-inline" data-icon="mdi:account-circle"></span>
+                                <span class="iconify-inline avatar" data-icon="mdi:account-circle"></span>
                                 <div class="trend-details">
                                     <a href="#">@username</a>
                                     <p>project name here</p>
                                 </div>
                             </div>
                             <div class="trend">
-                                <span class="iconify-inline" data-icon="mdi:account-circle"></span>
+                                <span class="iconify-inline avatar" data-icon="mdi:account-circle"></span>
                                 <div class="trend-details">
                                     <a href="#">@username</a>
                                     <p>project name here</p>
                                 </div>
                             </div>
                             <div class="trend">
-                                <span class="iconify-inline" data-icon="mdi:account-circle"></span>
+                                <span class="iconify-inline avatar" data-icon="mdi:account-circle"></span>
                                 <div class="trend-details">
                                     <a href="#">@username</a>
                                     <p>project name here</p>
